recursion.hanoi.lessons.recursion.hanoi.SplitHanoi1.scala.error
SplitHanoi1:22: error: illegal start of simple pattern
    case 0 -> { () }
              ^SplitHanoi1:30: error: '=>' expected but '}' found.
  } 
  ^